all code samples in astro format

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -16,13 +16,14 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
 
 1. You can check your version of Astro, and any official Astro integrations (`@astrojs/*`), in `package.json` at the root of your project. These may be in `devDependencies` and/or `dependencies`:
 
-    ```json "@astrojs/" {6}
+    ```json "@astrojs/" {7}
+    //package.json
     "devDependencies": {
       "@astrojs/react": "^1.2.2",
       "@astrojs/svelte": "^1.0.2",
       "@astropub/icons": "^0.1.1",
       "accessible-astro-components": "^1.4.5",
-      "astro": "2.0.0-beta.0",
+      "astro": "1.9.2",
       "react": "^18.2.0",
       "react-dom": "^18.0.0",
       "svelte": "^3.47.0"
@@ -158,12 +159,13 @@ Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importin
 
 This legacy flag is no longer available in Astro and should be removed:
 
-```astro del={3-5}
+```js del={3-5}
 // astro.config.mjs
 export default defineConfig({
 	legacy: {
 		astroFlavoredMarkdown: true,
 	},
+})
 
 ```
 
@@ -182,6 +184,7 @@ Astro 2.0 removes this option entirely. `Astro.resolve()` in your code will caus
 Resolve asset paths using `import` instead. For example:
 
 ```astro
+// src/pages/index.astro
 ---
 import 'style.css';
 import imageUrl from './image.png';
@@ -202,8 +205,11 @@ Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will
 
 Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or convert to the [Content Collections](/en/guides/content-collections/) feature.
 
-```js
+```astro
+// src/pages/index.astro
+---
 let allPosts = await Astro.glob('./posts/*.md');
+---
 ```
 
 ### Removed: `Astro.canonicalURL`
@@ -217,8 +223,12 @@ Astro 2.0 removes this option entirely. `Astro.canonicalURL()` in your code will
 
 Use `Astro.url` to construct a canonical URL.
 
-```js
+```astro
+// src/pages/index.astro
+---
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+---
+
 ```
 
 ### Added: `_astro/` folder for build assets
@@ -256,13 +266,13 @@ GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `
 
 You no longer need `extendDefaultPlugins: true` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
 
-```diff
+```js del={6}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   markdown: {
--   extendDefaultPlugins: true,
+    extendDefaultPlugins: true,
   }
 });
 ```
@@ -278,15 +288,15 @@ The option `extendDefaultPlugins: false` no longer exists. To disable Astro's de
 - `markdown.gfm: false` disables GitHub-Flavored Markdown
 - `markdown.smartypants: false` disables SmartyPants
 
-```diff
+```js del={6} ins={7-8}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   markdown: {
--   extendDefaultPlugins: false,
-+   smartypants: false,
-+   gfm: false,
+    extendDefaultPlugins: false,
+    smartypants: false,
+    gfm: false,
   }
 });
 ```
@@ -307,29 +317,29 @@ Astro 2.0 replaces `mdx.extendPlugins` with three new, independently-configurabl
 
 MDX options will default to their equivalent in your Markdown config. You no longer need `extendPlugins: 'markdown'` in your configuration for this behavior.
 
-```diff
+```js del={6}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   mdx: {
--   extendPlugins: markdown,
+    extendPlugins: markdown,
   }
 });
 ```
 
 If your MDX is currently configured to inherit only Astro's default plugins, replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` to disable all inheritance. Use the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
 
-```diff
+```js del={6} ins={7-9}
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
   mdx: {
--   extendPlugins: defaults,
-+   extendMarkdownConfig: false,
-+   smartypants: true,
-+   gfm: true,
+    extendPlugins: defaults,
+    extendMarkdownConfig: false,
+    smartypants: true,
+    gfm: true,
   }
 });
 ```
@@ -338,7 +348,7 @@ export default defineConfig({
 
 Setting `extendMarkdownConfig` to false now allows you to individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration config, including `syntaxHighlight`, `shikiConfig` and more.
 
-```astro
+```js
 // astro.config.mjs
 import { defineConfig } from 'astro/config';
 import mdx from '@astrojs/mdx';
@@ -411,13 +421,14 @@ Astro v2.0 brings some exciting new features from previous experimental flags in
 
 You can remove the following experimental flags from `astro.config.mjs`:
 
-```diff
+```js del={5-7}
+// astro.config.mjs
 import { defineConfig } from 'astro/config';
 
 export default defineConfig({
-- experimental: { contentCollections: true },
-- experimental: { prerender: true },
-- experimental: { error-overlay: true },
+  experimental: { contentCollections: true },
+  experimental: { prerender: true },
+  experimental: { error-overlay: true },
 })
 ```
 The following features are no longer hidden behind an experimental flag and are all enabled by default.
@@ -425,8 +436,8 @@ The following features are no longer hidden behind an experimental flag and are 
 #### What should I do?
 
 While these do not require a change to your codebase, you may now wish to enjoy:
-- [Content collections](/en/guides/content-collections/) as a way to manage your Markdown and MDX files with type-safety.
-- [Prerendering individul pages to static HTML](/en/guides/server-side-rendering/#prerendering) when using SSR to improve speed and cacheability.
+- [Content collections](#content-collections) as a way to manage your Markdown and MDX files with type-safety.
+- [Prerendering individual pages to static HTML](#prerendering) when using SSR to improve speed and cacheability.
 - [Error Overlay](#error-overlay) improvements, with a complete redesign to help you understand and fix your errors.
 
 
