entire first draft!

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -75,13 +75,11 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
 
 ## Do I need to update my code?
 
-Many projects will not need any changes to the codebase! Your upgrade may now be complete.  
-
-But, this upgrade does bring some big, potentially breaking changes:
+Many projects will not need any changes to the codebase! Your upgrade may now be complete. But, this upgrade does bring some big, potentially breaking changes:
 
 - **Vite 4**
 
-  Astro *should* [handle everything](#updated-vite-4) for you under the hood! But still, stuff to know!
+  Astro *should* [handle everything](#updated-vite-4) for you under the hood! But still, there's stuff to know!
 
 - **the complete removal of several previously-deprecated items**
 
@@ -438,17 +436,51 @@ The following features are no longer hidden behind an experimental flag and are 
 While these do not require a change to your codebase, you may now wish to enjoy:
 - [Content collections](#content-collections) as a way to manage your Markdown and MDX files with type-safety.
 - [Prerendering individual pages to static HTML](#prerendering) when using SSR to improve speed and cacheability.
-- [Error Overlay](#error-overlay) improvements, with a complete redesign to help you understand and fix your errors.
+- [Error Overlay](#error-overlay) improvements: a complete redesign to help you better understand and fix your errors.
 
 
 
 ### Content Collections
 
-The experimental flag `--experimental-contentCollections` has been removed. The Colletions API is now available by default in Astro. 
+The experimental flag `--experimental-contentCollections` has been removed. The Colletions API is now available by default in Astro.
+
+In 1.0, you could choose to keep your Markdown and MDX pages within `src/pages/` for automatic file-based routing. Or, you could choose another folder within `src/` and import your Markdown content into `.astro` page files.
+
+Astro 2.0 adds a new way to manage your Markdown and MDX files in Astro, and a special `src/content/` folder. [Content collections](/en/guides/content-collections/) will organize your content, validate your frontmatter, and provide automatic TypeScript type-safety of fetched content. 
+
+<FileTree>
+- src/content/
+  - **newsletter/** 
+    - week-1.md
+    - week-2.md
+    - week-3.md
+  - **authors/**
+    - grace-hopper.md
+    - alan-turing.md
+    - batman.md
+</FileTree>
+
+
+Available in both SSG and SSR mode, collections can optionally include schemas to enforce consistent frontmatter within each collection and provide helpful autocompletion. Code with confidence, knowing the shape of your data as you reference it inside a page or component template.
+
+```ts
+// src/content/config.ts
+import { z, defineCollection } from 'astro:content';
+
+const blogSchema = defineCollection({
+  schema: z.object({
+    title: z.string(),
+    tags: z.array(z.string()),
+    image: z.string().optional(),
+  }),
+});
+
+export const collections = {
+  'blog': blogSchema,
+};
+```
 
 See more about using [content collections in Astro](/en/guides/content-collections/).
-
-TODO - Guide for converting to Content Collections, ideally!
 
 ### Prerendering
 
@@ -456,7 +488,7 @@ The experimental flag `--experimental-prerender` has been removed. [The `prerend
 
 In 1.0, one of the most requested features was to enable route-level control of output so that some routes can be server-rendered while others are statically-generated.
 
-Astro 2.0 enables per route, opt-in prerendering when using `output: 'server'`. 
+Astro 2.0 enables per route, opt-in prerendering when using `output: 'server'` (SSR mode).
 
 Add `export const prerender = true` to any file in `src/pages/` that should be rendered at build time rather than request time.
 
@@ -470,6 +502,7 @@ const text = await fetch('https://example.com/').then(res => res.text())
 
 <Fragment set:html={text} />
 ```
+See more about using [SSR mode in Astro](/en/guides/server-side-rendering/).
 
 ### Error overlay
 
@@ -477,12 +510,12 @@ The experimental flag `--experimental-error-overlay` has been removed.
 
 We hope you don't encounter too many errors when you build with Astro!
 
-But when you do, we hope that enjoy our new error overlay to give you more helpful, and easy-to-read messages. You can now expect:
+But when you do, we hope that our new error overlay gives you more helpful, easy-to-read information. You can now expect:
 
 - A concise, descriptive error message identifying the problem.
 - A hint with more information, including tips for finding or resolving the issue.
 - A link to the error's page in docs. (There's one for every known Astro error!)
-- A full, syntax-colored code window when showing the location of your error.
+- A full, syntax-colored code window showing the location of the error.
 - Support for dark and light mode.
 - Houston in the corner!
 
