better hint at Houston

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -101,7 +101,7 @@ Many projects will not need any changes to the codebase! Your upgrade may now be
 
   You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
 
-So, [you might see Houston](#error-overlay) a few times before you're done! 
+You might have some work to do, and [you might see Houston](#error-overlay) a few times before you're done! 
 
 If your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. 
 
