--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -442,7 +442,7 @@ While these do not require a change to your codebase, you may now wish to enjoy:
 
 ### Content Collections
 
-The experimental flag `--experimental-contentCollections` has been removed. The Colletions API is now available by default in Astro.
+The experimental flag `--experimental-contentCollections` has been removed. The Collections API is now available by default in Astro.
 
 In 1.0, you could choose to keep your Markdown and MDX pages within `src/pages/` for automatic file-based routing. Or, you could choose another folder within `src/` and import your Markdown content into `.astro` page files.
 
