Responded to some Fred feedback

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -71,7 +71,7 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
     node -v
     ```
     
-    If necessary, [update your version of Node](en/upgrade-astro/#updated-node-version-16120) in your local and deployment environments.
+    If necessary, [update your version of Node](en/upgrade-astro/#removed-support-for-node-14) in your local and deployment environments.
 
 ## Do I need to update my code?
 
@@ -108,9 +108,21 @@ If your project doesn't work as expected after upgrading to v2.0, then check thi
 See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
 
-## Astro 2.0 Updates
+## Astro 2.0 Breaking Changes
 
-### Updated: Node Version >=16.12.0
+### Updated: Vite 4
+
+Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/). 
+
+#### What should I do?
+
+There should be no changes to your code necessary! Enjoy [many internal improvements under the hood](https://vitejs.dev/blog/announcing-vite4.html), without changing a thing.
+
+We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
+
+Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
+
+### Removed: Support for Node 14
 
 The minimum supported version of Node.js is now `16.12.0`.
 
@@ -131,21 +143,6 @@ Both your development environment and your deployment environment must now meet 
 
     You can specify Node 16.12.0 for your Astro project either in a dashboard configuration setting, or a `.nvmrc` file.
 
-
-### Updated: Vite 4
-
-Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/). 
-
-#### What should I do?
-
-There should be no changes to your code necessary! Enjoy [many internal improvements under the hood](https://vitejs.dev/blog/announcing-vite4.html), without changing a thing.
-
-We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
-
-Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
-
-
-## Astro 2.0 Breaking Changes
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
@@ -403,7 +400,7 @@ With access to a file's frontmatter, you can now write plugins that use this dat
   }
   ```
 
-### Added: `src/content/`
+### Reserved: `src/content/`
 
 In 1.0, the [Collections API was hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder.
 
@@ -411,7 +408,7 @@ Astro 2.0 now includes the Collections API in the core codebase for organizing y
 
 #### What should I do?
 
-If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This special folder can now only be used for [content collections](/en/guides/content-collections/).
+If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
 
 ## Astro 2.0 Experimental Flags Removed
 
