--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -90,7 +90,7 @@ If you aren't able to open your project in the browser, go back to the terminal 
 
 ## Starter Templates
 
-You can also start a new astro project based on an existing GitHub repostory by passing a `--template` argument to the `create astro` command.
+You can also start a new astro project based on an existing GitHub repository by passing a `--template` argument to the `create astro` command.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
