--- a/src/pages/ja/guides/deploy/vercel.mdx
+++ b/src/pages/ja/guides/deploy/vercel.mdx
@@ -7,7 +7,7 @@ i18nReady: true
 
 [Vercel](http://vercel.com/)を使用して、グローバルなエッジネットワークに設定無しでAstroサイトをデプロイできます。
 
-このガイドでは、ウェブサイトのUIまたはVercelのCLIを通じてVercelにデプロイする手順を紹介します。
+このガイドでは、ウェブサイトのUIまたはVercelのCLIを使ってVercelにデプロイする手順を紹介します。
 
 ## プロジェクトの設定
 
