--- a/src/pages/ja/guides/deploy/vercel.mdx
+++ b/src/pages/ja/guides/deploy/vercel.mdx
@@ -49,7 +49,7 @@ npx astro add vercel
 
 ## デプロイ方法
 
-Vercelへのデプロイは、ウェブサイトのUIまたはVercelのCLI（コマンドラインインターフェイス）を通じて行うことができます。静的サイト、SSRサイトともに手順は同じです。
+Vercelへのデプロイは、ウェブサイトのUIまたはVercelのCLI（コマンドラインインターフェイス）が利用できます。静的サイト、SSRサイトともに手順は同じです。
 
 ### ウェブサイトのUIからのデプロイ
 
