--- a/src/pages/fr/reference/publish-to-npm.mdx
+++ b/src/pages/fr/reference/publish-to-npm.mdx
@@ -6,11 +6,13 @@ description: Apprenez comment publier des composants Astro sur NPM
 
 Vous développez un nouveau composant Astro ? **Publiez-le sur [NPM](https://npmjs.com/)** !
 
-Publier un composant Astro est une excellente façon de réutiliser votre travail existant dans vos projets et de le partager avec la communauté d'Astro à grande échelle. Les composants Astro peuvent être publiés directement et installés depuis NPM, comme tout autre Package JavaScript.
+Publier un composant Astro est une excellente façon de réutiliser votre travail existant dans vos projets et de le partager avec la communauté d'Astro à grande échelle. Les composants Astro peuvent être publiés directement et installés depuis NPM, comme tout autre Paquet JavaScript.
 
 Vous cherchez de l'inspiration ? Regardez quelques-uns de nos [thèmes](https://astro.build/themes/) et [composants](https://astro.build/integrations/) préférés issus la communauté d'Astro. Vous pouvez aussi [rechercher sur NPM](https://www.npmjs.com/search?q=keywords:astro-component) pour voir l'ensemble du catalogue public.
 
-> Besoin d'aide ? Regardez [le modèle de composant de la communauté Astro](https://github.com/astro-community/component-template) pour un modèle de composant supporté par la communauté !
+:::tip[Besoin d'aide ?]
+Regardez [le modèle de composant de la communauté Astro](https://github.com/astro-community/component-template) pour un modèle de composant prêt à l'emploi et supporté par la communauté !
+:::
 
 ## Démarrage rapide
 
@@ -25,30 +27,31 @@ yarn create astro my-new-component-directory --template component
 pnpm create astro@latest my-new-component-directory -- --template component
 ```
 
-## Création d'un Package
+## Création d'un Paquet
 
 > Avant de se lancer, avoir une compréhension basique des sujets suivants vous sera d'une grande aide :
 >
 > - [Modules Node](https://docs.npmjs.com/creating-node-js-modules)
-> - [Manifeste de Package (`package.json`)](https://docs.npmjs.com/creating-a-package-json-file)
+> - [Manifeste de Paquet (`package.json`)](https://docs.npmjs.com/creating-a-package-json-file)
 > - [Espaces de travail](https://docs.npmjs.com/cli/v7/configuring-npm/package-json#workspaces)
 
 
-Pour créer un nouveau Package, nous vous recommandons fortement de configurer votre environnement de développement pour utiliser les **"Workspace" (ou espaces de travail)** dans votre projet. Cela vous permettra de développer votre composant avec une copie de fonctionnelle d'Astro.
+Pour créer un nouveau Paquet, nous vous recommandons fortement de configurer votre environnement de développement pour utiliser les **"Workspaces" (ou espaces de travail)** dans votre projet. Cela vous permettra de développer votre composant avec une copie fonctionnelle d'Astro.
 
-```
-my-new-component-directory/
-├─ demo/
-| └─ ... pour les tests et les démonstrations
-├─ package.json
-└─ packages/
-  └─ my-component/
-      ├─ index.js
-      ├─ package.json
-      └─ ... fichiers additionnels utilisés par le Package
-```
+<FileTree>
+- my-new-component-directory/
+  - demo/
+    - ... pour les tests et les démonstrations
+  - package.json
+  - packages/
+    - my-component/
+      - index.js
+      - package.json
+      - ... fichiers additionnels utilisés par le Paquet
+</FileTree>
 
-Dans cet exemple nommé `my-project`, nous créons un projet avec un seul Package, nommé `my-component`, et un répertoire `demo/` pour les tests et les démonstrations du composant.
+
+Dans cet exemple nommé `my-project`, nous créons un projet avec un seul Paquet, nommé `my-component`, et un répertoire `demo/` pour les tests et les démonstrations du composant.
 
 Tout cela est configuré dans le fichier `package.json` situé dans le répertoire racine du projet.
 
@@ -59,7 +62,7 @@ Tout cela est configuré dans le fichier `package.json` situé dans le répertoi
 }
 ```
 
-Dans cet exemple, plusieurs Packages peuvent être développés ensemble depuis le répertoire `packages`. Ces Packages peuvent également être référencés depuis `demo`, où vous pouvez installer une copie de fonctionnelle d'Astro.
+Dans cet exemple, plusieurs Paquets peuvent être développés ensemble depuis le répertoire `packages`. Ces Paquets peuvent également être référencés depuis `demo`, où vous pouvez installer une copie fonctionnelle d'Astro.
 
 ```shell
 npm init astro demo --template minimal
@@ -69,16 +72,16 @@ yarn create astro my-new-component-directory --template minimal
 pnpm create astro@latest my-new-component-directory -- --template minimal
 ```
 
-Il y a deux fichiers initiaux qui constituent votre Package individuel : `package.json` et `index.js`.
+Il y a deux fichiers initiaux qui constituent votre Paquet individuel : `package.json` et `index.js`.
 
 ### `package.json`
 
-Le fichier `package.json` dans le répertoire du Package contient toutes les informations relatives à votre projet, y compris sa description, ses dépendances, et toutes autres métadonnées de Package.
+Le fichier `package.json` dans le répertoire du Paquet contient toutes les informations relatives à votre projet, y compris sa description, ses dépendances, et toutes autres métadonnées du Paquet.
 
 ```json
 {
   "name": "my-component",
-  "description": "Component description",
+  "description": "Description du composant",
   "version": "1.0.0",
   "homepage": "https://github.com/owner/project#readme",
   "type": "module",
@@ -98,7 +101,7 @@ Une courte description de votre composant pour aider les autres à comprendre ce
 
 ```json
 {
-  "description": "An Astro Element Generator"
+  "description": "Un Generateur d'éléments Astro"
 }
 ```
 
@@ -128,7 +131,7 @@ C'est une bonne façon de diriger les utilisateurs vers une démonstration, une 
 
 #### `package.json#exports`
 
-Les points d'entrée d'un Package lorsqu'il est importé par nom.
+Les points d'entrée d'un Paquet lorsqu'il est importé par nom.
 
 ```json
 {
@@ -144,7 +147,7 @@ Dans cet exemple, l'importation de `my-component` utilise `index.js`, tandis que
 
 #### `files`
 
-C'est une optimisation optionnelle pour exclure les fichiers inutiles du paquet fourni aux utilisateurs via NPM. Notez que **seuls les fichiers listés ici seront inclus dans votre Package**, donc si vous ajoutez ou modifiez des fichiers nécessaires à votre Package pour qu'il fonctionne, vous devez mettre à jour cette liste en conséquence.
+C'est une optimisation optionnelle pour exclure les fichiers inutiles du paquet fourni aux utilisateurs via NPM. Notez que **seuls les fichiers listés ici seront inclus dans votre Paquet**, donc si vous ajoutez ou modifiez des fichiers nécessaires à votre Paquet pour qu'il fonctionne, vous devez mettre à jour cette liste en conséquence.
 
 ```json
 {
@@ -154,7 +157,7 @@ C'est une optimisation optionnelle pour exclure les fichiers inutiles du paquet 
 
 #### `keywords`
 
-Une liste de mots-clés pertinent à votre composant qui sont utilisés pour aider les autres à [trouver votre composant sur NPM](https://www.npmjs.com/search?q=keywords:astro-component) et dans tous les autres catalogues de recherche.
+Une liste de mots-clés pertinents à votre composant qui sont utilisés pour aider les autres à [trouver votre composant sur NPM](https://www.npmjs.com/search?q=keywords:astro-component) et dans tous les autres catalogues de recherche.
 
 Nous recommandons d'ajouter `astro-component` comme mot-clé spécial pour maximiser sa découverte dans l'écosystème Astro.
 
@@ -170,7 +173,7 @@ Nous recommandons d'ajouter `astro-component` comme mot-clé spécial pour maxim
 
 ### `index.js`
 
-Le point d'entrée principal du Package utilisé lorsque votre Package est importé.
+Le point d'entrée principal du Paquet utilisé lorsque votre Paquet est importé.
 
 ```js
 export { default as MyAstroComponent } from './MyAstroComponent.astro';
@@ -180,7 +183,7 @@ export { default as MyReactComponent } from './MyReactComponent.jsx';
 
 Cela vous permet de mettre plusieurs composants ensemble dans une seule interface.
 
-#### Exemple : Utilisation des importations nommés
+#### Exemple : Utilisation des importations nommées
 
 ```astro
 ---
@@ -191,7 +194,7 @@ import { MyReactComponent } from 'my-component';
 <MyReactComponent />
 ```
 
-#### Exemple : Utilisation des importations de namespace
+#### Exemple : Utilisation des importations de Namespace (Espace de Noms)
 
 ```astro
 ---
@@ -214,15 +217,15 @@ import MyReactComponent from 'example-astro-component/react';
 
 ---
 
-## Développement de votre Package
+## Développement de votre Paquet
 
-Astro n'a pas de mode Package pour le développement. Au lieu de cela, vous devriez utiliser un projet de démonstration pour développer et tester votre Package dans votre projet. Cela peut être un site web privé uniquement utilisé pour le développement, ou un site de démonstration/documentation pour votre Package.
+Astro n'a pas de mode Paquet pour le développement. Au lieu de cela, vous devriez utiliser un projet de démonstration pour développer et tester votre Paquet dans votre projet. Cela peut être un site web privé uniquement utilisé pour le développement, ou un site de démonstration/documentation pour votre Paquet.
 
 Si vous voulez extraire des composants d'un projet existant, vous pouvez aussi continuer à utiliser ce projet pour développer vos composants maintenant extraits.
 
 ## Tester votre composant
 
-Astro ne livre actuellement pas de suites de tests. C'est quelque chose que nous aimerions aborder. _(Si vous êtes intéressé·e·s pour aider, [rejoignez notre Discord !](https://astro.build/chat/))_
+Astro ne livre actuellement pas de suites de tests. C'est quelque chose que nous aimerions aborder. _(Si vous êtes intéressé·e·s pour aider, [rejoignez nous dans notre Discord !](https://astro.build/chat/))_
 
 En attendant, nos recommandations actuelles pour les tests sont :
 
@@ -231,51 +234,52 @@ En attendant, nos recommandations actuelles pour les tests sont :
 3. Chaque page devrait inclure un usage de composant différent que vous souhaitez tester.
 4. Exécutez `astro build` pour construire vos fixtures, puis comparez le résultat de `dist/__fixtures__/` à ce que vous attendiez.
 
-```bash
-my-project/demo/src/pages/__fixtures__/
-  ├─ test-name-01.astro
-  ├─ test-name-02.astro
-  └─ test-name-03.astro
-```
+<FileTree>
+- my-project/demo/src/pages/\_\_fixtures\_\_/
+  - test-name-01.astro
+  - test-name-02.astro
+  - test-name-03.astro
+</FileTree>
 
 ## Publier votre composant
 
-Une fois que votre Package est prêt, vous pouvez le publier sur NPM !
+Une fois que votre Paquet est prêt, vous pouvez le publier sur NPM !
 
-Pour publier un Package sur NPM, utilisez la commande `npm publish`. Si cela échoue, assurez-vous que vous vous êtes connecté via `npm login` et que votre `package.json` est correct. Si cela réussit, vous avez fini !
+Pour publier un Paquet sur NPM, utilisez la commande `npm publish`. Si cela échoue, assurez-vous que vous vous êtes connecté via `npm login` et que votre `package.json` est correct. Si cela réussit, vous avez fini !
 
-Notez que il n'y avait pas de étape `build` pour les Packages Astro. Tous les types de fichiers que Astro supporte peuvent être publiés directement sans étape de construction, car nous savons que Astro supporte déjà ces types de fichiers. Cela inclut tous les fichiers avec des extensions comme `.astro`, `.ts`, `.jsx`, et `.css`.
+Notez que il n'y avait pas de étape `build` pour les Paquets Astro. Tous les types de fichiers que Astro supporte peuvent être publiés directement sans étape de construction, car nous savons que Astro supporte déjà ces types de fichiers. Cela inclut tous les fichiers avec des extensions comme `.astro`, `.ts`, `.jsx`, et `.css`.
 
-Si vous avez besoin d'un autre type de fichier qui n'est pas supporté nativement par Astro, vous pouvez ajouter une étape de Build à votre Package. Nous vous laissons cet exercice avancé.
+Si vous avez besoin d'un autre type de fichier qui n'est pas supporté nativement par Astro, vous pouvez ajouter une étape de Build à votre Paquet. Nous vous laissons cet exercice avancé.
 
-## Bibliothèque d'intégration
+## Bibliothèque d'intégrations
 
-Partagez votre travail en ajoutant votre intégration à notre [bibliothèque d'intégration](https://astro.build/integrations) !
+Partagez votre travail en ajoutant votre intégration à notre [bibliothèque d'intégrations](https://astro.build/integrations) !
 
-### Données `package.json`
+### Données du fichier `package.json`
 
-La bibliothèque est mise à jour tous les jours automatiquement; chaque Package publié sur NPM avec le mot-clé `astro-component` est extrait.
+La bibliothèque est mise à jour tous les jours automatiquement; chaque Paquet publié sur NPM avec le mot-clé `astro-component` est extrait.
 
 La bibliothèque d'intégration lit les données `name`, `description`, `repository`, et `homepage` de votre `package.json`.
 
-Les avatars sont une bonne façon de mettre en évidence votre marque dans la bibliothèque ! Une fois que votre Package est publié, vous pouvez [créer une Issue GitHub](https://github.com/withastro/astro.build/issues/new/choose) avec votre avatar attaché et nous l'ajouterons à la liste.
+Les avatars sont une bonne façon de mettre en évidence votre marque dans la bibliothèque ! Une fois que votre Paquet est publié, vous pouvez [créer une Issue GitHub](https://github.com/withastro/astro.build/issues/new/choose) avec votre avatar attaché et nous l'ajouterons à la liste.
 
-> Besoin d'écraser les informations que notre bibliothèque lit de NPM ? Pas de problème ! [Créez une Issue GitHub](https://github.com/withastro/astro.build/issues/new/choose) avec les informations mises à jour et nous allons nous assurer que les informations personnalisées `name`, `description`, ou `homepage` sont bien utilisées à la place.
+:::tip
+ Besoin d'écraser les informations que notre bibliothèque lit de NPM ? Pas de problème ! [Créez une Issue GitHub](https://github.com/withastro/astro.build/issues/new/choose) avec les informations mises à jour et nous allons nous assurer que les informations personnalisées `name`, `description`, ou `homepage` sont bien utilisées à la place.
+:::
 
 ### Collections
 
-En plus du mot-clé obligatoire `astro-component`, des mots-clés spéciaux sont également utilisés pour organiser automatiquement les Packagees. Inclure n'importe quel mots-clés ci-dessous ajoutera votre intégration à notre bibliothèque d'intégration.
+En plus du mot-clé obligatoire `astro-component` ou `withastro`, des mots-clés spéciaux sont également utilisés pour organiser automatiquement les Paquets. Inclure n'importe quel mots-clés ci-dessous ajoutera votre intégration à notre bibliothèque d'intégrations.
 
-| Collection                                             | Mots-clés                                |
-|------------------------------------------------------- | ---------------------------------------- |
-| Tout                                                   | `astro-component`                        |
-| Analistes                                              | `analytics`                              |
-| CMS                                                    | `cms`, `database`                        |
-| CSS + Interface                                        | `css`, `ui`, `icon`, `icons`, `renderer` |
-| E-commerce                                             | `ecommerce`, `e-commerce`                |
-| Performance                                            | `performance`, `perf`                    |
-| SEO                                                    | `seo`, `performance`, `perf`             |
+| Collection        | Mots-clés                                    |
+|------------------ | -------------------------------------------- |
+| Accessibilité     | `a11y`, `accessibility`                      |
+| Adapteurs         | `astro-adapter`                              |
+| Analyse de données| `analytics`                                  |
+| CSS + UI          | `css`, `ui`, `icon`, `icons`, `renderer`     |
+| Frameworks        | `renderer`                                   |
+| Performance + SEO | `performance`, `perf`, `seo`, `optimization` |
 
 ## Partagez
 
-Nous vous encourageons à partager votre travail, nous apprécions vraiment de voir ce que nos astronautes talentueux créent. Partagez ce que vous créez avec nous dans notre [Discord](https://discord.gg/YQRVveAgED) ou mentionnez [@astrodotbuild](https://twitter.com/astrodotbuild) dans un Tweet !
+Nous vous encourageons à partager votre travail, nous apprécions vraiment de voir ce que nos talentueux Astronautes créent. Partagez ce que vous créez avec nous dans notre [Discord](https://discord.gg/YQRVveAgED) ou mentionnez [@astrodotbuild](https://twitter.com/astrodotbuild) dans un Tweet !
