add comma to tsconfig.json example

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -37,7 +37,7 @@ To benefit from the full TypeScript and autocompletion features of [using schema
 
   ```json title="tsconfig.json" ins={3-5} "base"
   {
-    "extends": "astro/tsconfigs/base"
+    "extends": "astro/tsconfigs/base",
     "compilerOptions": {
       "strictNullChecks": true
     }
