import `FileTree` component

--- a/src/pages/fr/reference/publish-to-npm.mdx
+++ b/src/pages/fr/reference/publish-to-npm.mdx
@@ -3,6 +3,8 @@ layout: ~/layouts/MainLayout.astro
 title: Publier sur NPM
 description: Apprenez comment publier des composants Astro sur NPM
 ---
+import FileTree from '~/components/FileTree.astro'
+
 
 Vous développez un nouveau composant Astro ? **Publiez-le sur [NPM](https://npmjs.com/)** !
 
