Revert "Merge branch 'main' into upgrade-to-v2"
This reverts commit 2d8d8b37a717767733d9cf97a7edf5a02281c614.

--- a/src/pages/fr/core-concepts/framework-components.mdx
+++ b/src/pages/fr/core-concepts/framework-components.mdx
@@ -133,7 +133,7 @@ import MyReactSidebar from '../components/MyReactSidebar.jsx';
 </MyReactSidebar>
 ```
 
-De plus, vous pouvez utiliser les ["Slots" Nommés](/fr/core-concepts/astro-components/#les-emplacements-nommés) pour grouper des enfants spécifiques ensemble.
+De plus, vous pouvez utiliser les ["Slots" Nommés](/fr/core-concepts/astro-components/#slots-nommés) pour grouper des enfants spécifiques ensemble.
 
 Dans React, Preact et Solid, ces "Slots" seront convertis en propriété de niveau supérieur. Les noms de slots utilisant le format `kebab-case` seront convertis en `camelCase`.
 
