--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -47,7 +47,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 </MySiteLayout>
 ```
 
-📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#les-emplacements-slots).
+📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#slots).
 
 ## Inclure des Layouts
 
