--- a/src/pages/fr/guides/markdown-content.mdx
+++ b/src/pages/fr/guides/markdown-content.mdx
@@ -42,7 +42,7 @@ layout: ../layouts/BaseLayout.astro
 Un Layout typique pour les Pages Markdown comprend :
 
 1. la propriété `content` pour accéder aux données de l'en-tête de la Page Markdown.
-2. un [`<slot />` par défaut](/fr/core-concepts/astro-components/#les-emplacements-slots) pour indiquer où le contenu Markdown de la page devrait être affiché.
+2. un [`<slot />` par défaut](/fr/core-concepts/astro-components/#slots) pour indiquer où le contenu Markdown de la page devrait être affiché.
 
 ```astro
 ---
