--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -702,10 +702,10 @@ Pagination will pass a `page` prop to every rendered page that represents a sing
 | `page.url.prev`    | `string \| undefined` | Get the URL of the previous page (will be `undefined` if on page 1).                                                              |
 | `page.url.next`    | `string \| undefined` | Get the URL of the next page (will be `undefined` if no more pages).                                                              |
 
-## Content Collections
+## Content Collections (Experimental)
 
 <p>
-  <Since v="2.0.0" />
+  <Since v="1.7.0" />
 </p>
 
 Content collections offer APIs to configure and query your Markdown or MDX documents in `src/content/`. For features and usage examples, [see our content collections guide](/en/guides/content-collections/).
@@ -718,10 +718,10 @@ Content collections offer APIs to configure and query your Markdown or MDX docum
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
-  schema: z.object({
+  schema: {
     title: z.string(),
     permalink: z.string().optional(),
-  }),
+  },
   slug({ id, data, defaultSlug, body }) {
     return data.permalink ?? defaultSlug;
   }
@@ -736,9 +736,9 @@ This function accepts the following properties:
 
 #### `schema`
 
-**Type:** `TSchema extends ZodType`
+**Type:** `TSchema extends ZodAnyObject | undefined`
 
-`schema` is an optional Zod object to configure the type and shape of document frontmatter for a collection. Each object value must use [a Zod validator](https://github.com/colinhacks/zod).
+`schema` is an optional object to configure the type and shape of document frontmatter for a collection. Each object value must use [a Zod validator](https://github.com/colinhacks/zod).
 
 #### `slug()`
 
