--- a/src/pages/pt-br/core-concepts/endpoints.mdx
+++ b/src/pages/pt-br/core-concepts/endpoints.mdx
@@ -12,12 +12,11 @@ Em sites gerados de forma estática, seus endpoints customizados são chamados d
 Endpoints estáticos e SSR são definidos de maneira similar, mas os endpoints SSR suportam funcionalidades adicionais.
 
 ## Endpoints de Arquivos Estáticos
-
 Para criar um endpoint customizado, adicione um arquivo `.js` ou `.ts` no diretório `/pages`. A extensão do arquivo será removida durante o processo de build, portanto o nome do arquivo deve conter a extensão que você deseja que os dados usem, por exemplo `src/pages/data.json.ts` se tornará a rota `/data.json`.
 
-Seus endpoints devem exportar uma função `get` (opcionalmente assíncrona) que recebe um [objeto de contexto](/pt-br/reference/api-reference/#contexto-de-endpoint) com propriedades similares a global `Astro`. Ele retorna um objeto com um `body`, que o Astro irá chamar durante a build e utilizar seu conteúdo para gerar o arquivo.
+Seus endpoints devem exportar uma função `get` (opcionalmente assíncrona) que recebe um objeto com as propriedades (`param` e `request`) como único parâmetro e retorna um objeto contendo a propriedade `body`. Essa função será chamada pelo Astro durante a build, que utilizará os conteúdos da propriedade `body` para gerar o arquivo.
 
-```ts title="src/pages/builtwith.json.ts"
+```js title="src/pages/builtwith.json.ts"
 // Se tornará: /builtwith.json
 export async function get({params, request}) {
   return {
@@ -32,7 +31,7 @@ export async function get({params, request}) {
 O objeto retornado também pode conter a propriedade `encoding`. Ela deve ser uma string válida do tipo [`BufferEncoding`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/bdd02508ddb5eebcf701fdb8ffd6e84eabf47885/types/node/buffer.d.ts#L169) aceita pelo método `fs.writeFile` do Node.js. Por exemplo, para gerar uma imagem no formato png retornamos:
 
 ```ts title="src/pages/builtwith.json.ts"
-export async function get({ params, request }) {
+export async function get({ params, request }) => {
   const response = await fetch("https://astro.build/assets/press/full-logo-light.png");
   const buffer = Buffer.from(await response.arrayBuffer());
 
@@ -99,7 +98,7 @@ export const get: APIRoute = ({ params, request }) => {
 ```
 
 ## Endpoints do Servidor (Rotas de API)
-Tudo descrito na seção de endpoints de arquivos estáticos também pode ser utilizado no modo SSR: arquivos podem exportar uma função `get` que recebe um [objeto de contexto](/pt-br/reference/api-reference/#contexto-de-endpoint) com propriedades similares a global `Astro`.
+Tudo descrito na seção de endpoints de arquivos estáticos também pode ser utilizado no modo SSR: arquivos podem exportar uma função `get` que recebe um objeto com as propriedades `params` e `request`.
 
 Porém, diferente do modo `static`, quando você configura o modo `server`, os endpoints serão construídos no momento em que são requisitados. Isso desbloqueia novas funcionalidades que estão indisponíveis durante a build e permite que você construa rotas de API que respondem requisições e seguramente executam código no servidor em runtime.
 
@@ -199,12 +198,12 @@ export const post: APIRoute = async ({ request }) => {
 ```
 
 ### Redirecionamentos
-O contexto do endpoint exporta um utilitário `redirect()` similar ao `Astro.redirect`:
+Como `Astro.redirect` não está disponível em rotas de API, você pode usar o método [`Response.redirect`](https://developer.mozilla.org/en-US/docs/Web/API/Response/redirect) para redirecionar:
 
 ```js title="src/pages/links/[id].js" {14}
 import { getLinkUrl } from '../db';
 
-export async function get({ params, redirect }) {
+export async function get({ params }) {
   const { id } = params;
   const link = await getLinkUrl(id);
 
@@ -215,7 +214,7 @@ export async function get({ params, redirect }) {
     });
   }
 
-  return redirect(link, 307);
+  return Response.redirect(link, 307);
 }
 ```
 
