Polish integrations.mdx

--- a/src/pages/fr/integrations/integrations.mdx
+++ b/src/pages/fr/integrations/integrations.mdx
@@ -36,17 +36,17 @@ Les sites et articles suivants sont majoritairement en anglais.
 
 ## Articles de Blog / Vidéos
 
-[NavillusBlog](https://navillus.dev/blog/astro-plus-snipcart) - **Post**: Astro + Snipcart repository and demo site
+[NavillusBlog](https://navillus.dev/blog/astro-plus-snipcart) - **Article de blog**: Astro + Snipcart repository and demo site
 
-[Cassidy Williams](https://www.netlify.com/blog/2021/07/23/build-a-modern-shopping-site-with-astro-and-serverless-functions/) - **Post**: Building Shopify Stores with Astro and the Storefront API
+[Cassidy Williams](https://www.netlify.com/blog/2021/07/23/build-a-modern-shopping-site-with-astro-and-serverless-functions/) - **Article de blog**: Building Shopify Stores with Astro and the Storefront API
 
-[Learn With Jason](https://youtube.com/watch?v=FJOJmKFngLI) - **Video**: Building a custom cart in Astro with Shopify Storefront API
+[Learn With Jason](https://youtube.com/watch?v=FJOJmKFngLI) - **Vidéo**: Building a custom cart in Astro with Shopify Storefront API
 
-[Front End Horse](https://www.youtube.com/watch?v=qFUfuDSLdxM) - **Video**: Building with Astro & Prismic
+[Front End Horse](https://www.youtube.com/watch?v=qFUfuDSLdxM) - **Vidéo**: Building with Astro & Prismic
 
-[Chris Bongers](https://aviyel.com/post/1006/adding-typesense-search-to-an-astro-static-generated-website) - **Post**: Adding Typesense Search to an Astro Website
+[Chris Bongers](https://aviyel.com/post/1006/adding-typesense-search-to-an-astro-static-generated-website) - **Article de blog**: Adding Typesense Search to an Astro Website
 
-[The Net Ninja](https://www.youtube.com/playlist?list=PL4cUxeGkcC9hZm9NYpd4G-jhoeEk0ls--) - **Video**: Figma and Astro Static Site Build
+[The Net Ninja](https://www.youtube.com/playlist?list=PL4cUxeGkcC9hZm9NYpd4G-jhoeEk0ls--) - **Vidéo**: Figma and Astro Static Site Build
 
 ## Dépots / Templates de démarrage
 
@@ -55,17 +55,17 @@ Vous pouvez démarrer un nouveau projet astro basé sur un dépôt github exista
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm create astro@latest -- --template <github-username>/<github-repo>
+  npm create astro@latest -- --template <nom-d-utilisateur-github>/<depot-github>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm create astro@latest --template <github-username>/<github-repo>
+  pnpm create astro@latest --template <nom-d-utilisateur-github>/<depot-github>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn create astro --template <github-username>/<github-repo>
+  yarn create astro --template <nom-d-utilisateur-github>/<depot-github>
   ```
   </Fragment>
 </PackageManagerTabs>
@@ -80,8 +80,5 @@ Vous pouvez démarrer un nouveau projet astro basé sur un dépôt github exista
 
 
 :::tip
-See examples of even more starter repositories and sites built with Astro at [Awesome Astro](https://github.com/one-aalam/awesome-astro#%E2%84%B9%EF%B8%8F-repositoriesstarter-kitscomponents)
+Voir plus d'exemples de modèles de démarrage et de sites construits avec Astro à l'addresse [Awesome Astro](https://github.com/one-aalam/awesome-astro#%E2%84%B9%EF%B8%8F-repositoriesstarter-kitscomponents)
 :::
-
-Voir plus d'exemples de modèles de démarrage et de sites construits avec Astro à cet addresse : [Awesome Astro]
-----
