--- a/src/pages/fr/install/auto.mdx
+++ b/src/pages/fr/install/auto.mdx
@@ -1,8 +1,6 @@
 ---
 title: Installation d'Astro avec l'ILC automatique
-description: >-
-  Comment installer Astro avec NPM, PNPM, ou Yarn via l'outil de création
-  create-astro inclus dans l'ILC.
+description: "Comment installer Astro avec NPM, PNPM, ou Yarn via l'outil de création create-astro inclus dans l'ILC."
 layout: ~/layouts/MainLayout.astro
 ---
 import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
@@ -30,9 +28,7 @@ Vous préférez essayer Astro dans votre navigateur ? Visitez [astro.new](https:
 
 ## 1. Utiliser l'assistant d'installation
 
-Lancez la commande suivante dans votre terminal pour démarrer notre assistant d'installation, `create-astro`. Vous serez guidé dans la création de votre premier projet Astro à l'intérieur du répertoire où vous l'avez lancé.
-
-Pas besoin de créer un répertoire ! L'assistant d'installation créera automatiquement un répertoire pour vous.
+Exécutez la commande suivante dans votre terminal pour démarrer notre assistant d'installation pratique :
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -55,7 +51,7 @@ Pas besoin de créer un répertoire ! L'assistant d'installation créera automat
   </Fragment>
 </PackageManagerTabs>
 
-Vous pouvez exécuter `create-astro` n'importe où sur votre machine, il n'y a donc pas besoin de créer un nouveau répertoire vide  pour votre projet avant de commencer. Si vous n'avez encore pas de répertoire vide pour votre nouveau projet, l'assistant aidera à en créer un automatiquement.
+Vous pouvez exécuter `create astro` n'importe où sur votre machine, il n'est donc pas nécessaire de créer un nouveau répertoire vide pour votre projet avant de commencer. Si vous n'avez pas encore de répertoire vide pour votre nouveau projet, l'assistant créera automatiquement un pour vous.
 
 Si tout se passe bien, vous devriez voir un message "Ready for liftoff!" suivi de quelques "Étapes suivantes". Exécutez `cd` vers votre nouveau répertoire pour commencer à utiliser Astro.
 
@@ -63,9 +59,9 @@ Si vous avez manqué l'étape `npm install` durant l'assistant `create-astro`, v
 
 ## 2. Lancer Astro ✨
 
-Vous pouvez vous attendre à utiliser le serveur de développement intégré d'Astro pour la plupart de vos projets. C'est de cette manière que vous lancerez votre projet localement pendant le développement.
+Avec Astro, vous disposez d'un serveur de développement intégré qui regroupe toutes les fonctionnalités nécessaires pour la réalisation de votre projet. La commande `astro dev` démarrera le serveur de développement local pour que vous puissiez voir votre nouveau site web en action pour la toute première fois.
 
-Pour commencer, utilisez votre gestionnaire de Packages pour lancer le script de démarrage par défaut :
+Chaque modèle de départ est livré avec un script préconfiguré qui exécutera `astro dev`` pour vous. Utilisez votre gestionnaire de paquets préféré pour exécuter cette commande et démarrer le serveur de développement d'Astro.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -91,14 +87,39 @@ Astro va également suivre les modifications de fichiers dans le répertoire `sr
 
 Si vous n'arrivez pas à ouvrir votre projet dans le navigateur, revenez au terminal où vous avez lancé le script `dev` pour voir ce qui a mal tourné, ou si votre projet est servi sur une url différente que celle mentionnée ci-dessus.
 
+Vous pouvez également démarrer un nouveau projet Astro basé sur un dépôt GitHub existant en passant un argument `--template` à la commande `create astro`.
+
+## Modèles de démarrage
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm create astro@latest -- --template <nom-d-utilisateur-github>/<depot-github>
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm create astro@latest --template <nom-d-utilisateur-github>/<depot-github>
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn create astro --template <nom-d-utilisateur-github>/<depot-github>
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+
+Explorez notre [galerie de thèmes et de modèles de démarrage](https://astro.build/themes/) où vous pouvez parcourir des thèmes pour des blogs, des portfolios, de la documentation, des pages d'atterrissage, et plus encore! Ou, [recherchez sur GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) pour encore plus de projets de démarrage.
+
 ## Étapes Suivantes
 
-Bravo ! Vous êtes maintenant prêt à développer avec Astro !
+Bravo ! Vous êtes maintenant prêt à développer avec Astro ! 🥳
 
-Voici quelques sujets que nous vous recommendons de suivre. Vous pouvez les suivre dans l'ordre. Vous pouvez même laisser la documentation de côté pendant un temps et aller jouer dans le code de votre nouveau projet Astro, en revenant ici si vous avez des problèmes ou une question.
+Voici quelques sujets que nous vous recommandons d'explorer ensuite. Vous pouvez les lire dans n'importe quel ordre. Vous pouvez même quitter notre documentation pour un moment et aller jouer dans votre nouveau codebase de projet Astro, revenant ici chaque fois que vous rencontrez des problèmes ou avez des questions.
 
-📚 **Ajouter un framework:** Apprenez comment étendre Astro avec le support de React, Svelte, Tailwind et plus en utilisant `npx astro add` dans notre [guide d'Integrations](/fr/guides/integrations-guide/).
+📚 **Ajoutez un framework:** Apprenez à étendre Astro avec un support pour React, Svelte, Tailwind et plus encore en utilisant `npx astro add` dans notre [guide d'intégrations](/fr/guides/integrations-guide/).
 
-📚 **Déployer votre site:** Apprenez-en plus sur la façon de builder et déployer un projet Astro sur le web dans notre [guide de Déploiement](/fr/guides/deploy/).
+📚 **Déployez votre site:** Apprenez à construire et déployer un projet Astro sur le web dans notre [guide de déploiement](/fr/guides/deploy/).
 
-📚 **Comprendre la structure de projet:** En apprendre plus sur la structure de votre projet Astro dans notre [Guide de structure de projet](/fr/core-concepts/project-structure/).
+📚 **Comprenez votre projet:** En savoir plus sur la structure de projet d'Astro dans notre [guide de la structure de projet](/fr/core-concepts/project-structure/).
