import `PackageManagerTabs` component

--- a/src/pages/fr/integrations/integrations.mdx
+++ b/src/pages/fr/integrations/integrations.mdx
@@ -2,6 +2,8 @@
 layout: ~/layouts/MainLayout.astro
 title: Créé avec Astro
 ---
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
 
 Les membres de la communauté d'Astro ont intégré avec succès plusieurs services et outils tiers dans leurs sites Astro !
 
