correct missing fragment

--- a/src/pages/fr/integrations/integrations.mdx
+++ b/src/pages/fr/integrations/integrations.mdx
@@ -10,7 +10,7 @@ Les membres de la communauté d'Astro ont intégré avec succès plusieurs servi
 Voici quelques sites déployés, des dépôts, des articles de blog et des vidéos de la communauté montrant comment vous pouvez connecter Astro avec une variété de technologies CMS, eCommerce, Authentification/Autorisation, Recherche et Commentaires.
 
 :::tip
-À la recherche d'une intégration spécifique ? Jetez un oeil à notre [bibliothèque d'intégrations](https://astro.build/integrations/), et apprenez comment [ajouter vos intégrations](/fr/reference/publish-to-npm/#bibliothèque-dintégration) à la bibliothèque.
+À la recherche d'une intégration spécifique ? Jetez un oeil à notre [bibliothèque d'intégrations](https://astro.build/integrations/), et apprenez comment [ajouter vos intégrations](/fr/reference/publish-to-npm/#bibliothèque-dintégrations) à la bibliothèque.
 :::
 
 
