--- a/src/pages/ja/guides/deploy/surge.mdx
+++ b/src/pages/ja/guides/deploy/surge.mdx
@@ -5,7 +5,7 @@ layout: ~/layouts/DeployGuideLayout.astro
 i18nReady: true
 ---
 
-Astroプロジェクトは、フロントエンド開発者向けに設計されたシングルコマンドのWeb公開プラットフォームである[Surge](https://surge.sh/)にデプロイすることができます。
+フロントエンド開発者向けに設計されたシングルコマンドのWeb公開プラットフォームである[Surge](https://surge.sh/)に、Astroサイトをデプロイできます。
 
 ## デプロイ方法
 
