--- a/src/pages/ja/guides/deploy/surge.mdx
+++ b/src/pages/ja/guides/deploy/surge.mdx
@@ -9,7 +9,7 @@ i18nReady: true
 
 ## デプロイ方法
 
-1. [Surge CLI](https://www.npmjs.com/package/surge)をまだグローバルにインストールしていない場合、インストールします。
+1. [Surge CLI](https://www.npmjs.com/package/surge)のインストールがまだであれば、ターミナルからグローバルにインストールします。
 
     ```shell
     npm install -g surge
