--- a/src/pages/ja/guides/deploy/surge.mdx
+++ b/src/pages/ja/guides/deploy/surge.mdx
@@ -27,4 +27,4 @@ i18nReady: true
     surge dist
     ```
 
-    デプロイ時に `surge dist yourdomain.com` を実行すると、[カスタムドメイン](http://surge.sh/help/adding-a-custom-domain) を使用することができます。
+    デプロイ時に `surge dist yourdomain.com` を実行すると、[カスタムドメイン](http://surge.sh/help/adding-a-custom-domain) を使用できます。
