i18n(es): Update of `getting-started.mdx`, `vercel.mdx` , `imports.md` and `markdown-content.md` (#2342)
* update of getting-started, vercel, imports and markdown-content

* missing commit

* fixed link

* fixed typos

* fixed link

* fixed typos

Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/getting-started.mdx
+++ b/src/pages/es/getting-started.mdx
@@ -36,7 +36,7 @@ Visita [astro.new](https://astro.new/) y elige entre una variedad de plantillas 
 
 ## Empieza tu primer proyecto
 
-¡Crea un nuevo proyecto de Astro localmente con nuestro asistente de CLI `create-astro`!
+¡Crea un nuevo proyecto de Astro localmente con nuestro asistente de CLI `create astro`!
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -59,7 +59,8 @@ Visita [astro.new](https://astro.new/) y elige entre una variedad de plantillas 
   </Fragment>
 </PackageManagerTabs>
 
-Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones paso a paso para instalar Astro utilizando tu gestor de paquetes favorito.
+Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones completas y paso a paso para instalar Astro usando nuestro asistente CLI, como crear un nuevo proyecto desde un repositorio de GitHub y para instalar Astro manualmente.
+
 
 ## Aprende Astro
 
@@ -95,7 +96,7 @@ Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones paso a pa
 💬 ¡Comparte lo que has hecho en nuestro canal `#showcase`!
 
 
-## Aprende más
+## ¿Qué hay de nuevo?
 
 [Blog de Astro](https://astro.build/blog/)
 
