--- a/src/pages/es/guides/deploy/vercel.mdx
+++ b/src/pages/es/guides/deploy/vercel.mdx
@@ -78,3 +78,9 @@ Una vez que tu proyecto ha sido importado y desplegado, todos los envíos subsec
 2. Vercel detectará automáticamente Astro y establecerá la configuración necesaria.
 3. Cuando pregunte `Want to override the settings? [y/N]`, selecciona `N`.
 4. ¡Tu aplicación está desplegada! (p. ej. [astro.vercel.app](https://astro.vercel.app/))
+
+### Configuración con vercel.json
+
+Puedes usar `vercel.json` para sobrescribir el comportamiento predeterminado de Vercel y para configurar ajustes adicionales. Por ejemplo, es posible que desees adjuntar encabezados a las respuestas HTTP de tus despliegues.
+
+📚 Aprende más sobre la [configuración de Vercel](https://vercel.com/docs/configuration).
