--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -819,7 +819,7 @@ Una función para compilar un documento Markdown o MDX dado para su renderizado.
 
 - `<Content />` - Un componente usado para renderizar el contenido del documento en un archivo Astro.
 - `headings` - Una lista generada de encabezados, [que refleja la utilidad `getHeadings()` de Astro](/es/guides/markdown-content/#propiedades-exportadas) en las importaciones de Markdown y MDX.
-- `remarkPluginFrontmatter` - El objeto frontmatter moficado después de cualquier [plugin remark o rehype ha sido aplicado](/es/guides/markdown-content/#ejemplo-inyectando-frontmatter). Configurado para el tipo `any`.
+- `remarkPluginFrontmatter` - El objeto frontmatter es moficado después de aplicar los [plugins de remark o rehype ha sido aplicado](/es/guides/markdown-content/#modificación-programática-del-frontmatter). Configurado para el tipo `any`.
 
 ```astro
 ---
